--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
 	</dependency>
+        <dependency>
+        	<groupId>net.java.quickcheck</groupId>
+        	<artifactId>quickcheck</artifactId>
+        	<version>0.6</version>
+        	<scope>test</scope>
+        </dependency>
     </dependencies>
     
     <build>
