Añadido report del pit al site.

--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,18 @@
       </reportSet>
     </reportSets>
   </plugin>
-  
+  <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <version>LATEST</version>
+            <reportSets>
+                <reportSet>
+                    <reports>
+                        <report>report</report>
+                    </reports>
+                </reportSet>
+            </reportSets>
+        </plugin>
 </plugins>
 </reporting>
 </project>
