--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0</version>
+	</dependency>
     </dependencies>
     
     <build>
